efls-data/deploy/quickstart/flink_pod_template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taskmanager-pod-template
spec:
  containers:
  - name: flink-main-container
    resources:
      #set ephemeral-storage of container of a Pod
      requests:
        ephemeral-storage: 2048Mi
      limits:
        ephemeral-storage: 2048Mi
    volumeMounts:
      - mountPath: /opt/flink/volumes/hostpath
        name: flink-volume-hostpath
      - mountPath: /opt/flink/artifacts
        name: flink-artifact
      - mountPath: /opt/flink/log
        name: flink-logs
      # Define mounted file path,"file:///data/..."
      - mountPath: "/data"
        name: nas-pv-storage
  volumes:
    - name: flink-volume-hostpath
      hostPath:
        path: /tmp
        type: Directory
    - name: flink-artifact
      emptyDir: { }
    - name: flink-logs
      emptyDir: { }
    - name: nas-pv-storage
    # pvc
      persistentVolumeClaim:
        claimName: nas-pvc
